increase timeout to 30 sec for all dbs

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,4 @@ MYSQL_PASSWORD=password
 
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017/appwrite_migration
+MONGODB_DATABASE=appwrite_migration
