--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node src/index.js",
     "migrate": "node src/migrate.js",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/index.js",
+    "test-connections": "node test-all-connections.js"
   },
   "keywords": ["appwrite", "migration", "database"],
   "author": "",
