storage migration added

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,19 @@ MYSQL_PASSWORD=password
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017/appwrite_migration
 MONGODB_DATABASE=appwrite_migration
+
+# Storage Migration Configuration
+# Choose either Cloudinary or AWS S3
+STORAGE_PROVIDER=cloudinary
+# STORAGE_PROVIDER=s3
+
+# Cloudinary Configuration (if using Cloudinary)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+# AWS S3 Configuration (if using S3)
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your_access_key_id
+AWS_SECRET_ACCESS_KEY=your_secret_access_key
+AWS_BUCKET_NAME=your_bucket_name
