--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "migrate": "node src/migrate.js",
+    "migrate-storage": "node src/scripts/storage.js",
     "dev": "node --watch src/index.js",
     "test-connections": "node test-all-connections.js"
   },
@@ -18,7 +19,10 @@
     "pg": "^8.11.3",
     "mysql2": "^3.6.5",
     "mongodb": "^6.3.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "cloudinary": "^1.41.0",
+    "@aws-sdk/client-s3": "^3.658.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/pg": "^8.10.9"
