fix storage configs now work for s3

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,6 @@ AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your_access_key_id
 AWS_SECRET_ACCESS_KEY=your_secret_access_key
 AWS_BUCKET_NAME=your_bucket_name
+
+# Storage Migration Folder Configuration
+STORAGE_FOLDER_PREFIX=my_app_files
